fixed task overflow

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -49,7 +49,7 @@
   height: 95px;
   
   justify-items: center;
-  overflow: hidden;
+  
 }
 
 
