--- a/src/components/Calendar/DayTask/DayTask.module.css
+++ b/src/components/Calendar/DayTask/DayTask.module.css
@@ -7,7 +7,7 @@
 
 
 
-.taskLabel1, .taskLabel2{
+.taskLabel, .overflowLabel{
   margin: 0px;
   border-radius: 3px;
   padding: 2px;
@@ -20,10 +20,16 @@
 
 
 
-.taskLabel1{
-  background-color: rgb(42, 157, 165);
+.taskLabel{
+  background-color: rgb(140, 179, 180);
 }
 
-.taskLabel2{
+.overflowLabel{
+  
+  background-color: rgb(224, 225, 235);
+}
+
+.palette{
   background-color: hsl(46, 100%, 41%);
+  background-color: rgb(42, 157, 165);
 }
